# GPU-Boost

./: .env.staging  .gitignore  CONTRIBUTING.md  LICENSE  Phase_struct.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_or_data_leak.md
.github/workflows/: ci.yml
data/gpuboost/experiments/: pairs.json
data/gpuboost/manifests/: mlcommons_inference_intake_report.json  mlcommons_inference_intake_report.md  techpowerup_gpu_specs_intake_report.json  techpowerup_gpu_specs_intake_report.md  third_party_raw_inventory.json  third_party_raw_inventory.md  training_readiness_report.json  training_readiness_report.md
docs/: agent-cli.md  agent-core.md  comparison.md  demo-report-template.md  demo-workflow.md  dependency-review.md  final-project-summary.md  history.md  model-interface.md  model-training.md  phase-12-release-readiness.md  phase-13-release-readiness.md  phase-13-testing.md  phase-14-validation-summary.md  phase1.md  post-release-audit.md  pre-phase-12-audit-report.md  pre-phase-12-issue-drafts.md  publishing.md  quickstart.md  real-world-validation.md  release-checklist.md  release-notes.md  repository-completion-audit.md  security-review.md  setup.md  trial-workspace.md
examples/: agentic_apply_demo.txt  bad_train_sample.txt  sample_info_output.txt
examples/outcome_collection/: README.md  pairs.example.json
examples/outcome_collection/workloads/: _common.py  _neutral_common.py  amp_baseline.py  amp_optimized.py  batch_small_baseline.py  batch_small_optimized.py  dataloader_baseline.py  dataloader_optimized.py  neutral_baseline.py  (+1 more)
examples/real_world/: README.md  _common.py  dataloader_training_baseline.py  dataloader_training_optimized.py  pytorch_cnn_baseline.py  pytorch_cnn_optimized.py  transformer_toy_baseline.py  transformer_toy_optimized.py
gpuboost/: __init__.py  __main__.py  repository.py
gpuboost/advisor/: __init__.py  engine.py  rules.py  scoring.py  utils.py
gpuboost/agent/: __init__.py  actions.py  approved_apply.py  executor.py  handlers.py  planner.py  report.py  state.py  workflow.py
gpuboost/benchmarks/: __init__.py  batch_sweep.py  common.py  dataloader.py  matmul.py  mixed_precision.py  runner.py
gpuboost/cli/: __init__.py  main.py  rendering.py
gpuboost/code_analysis/: __init__.py  dataloader.py  optimizations.py  parser.py  runner.py  sync_calls.py  visitors.py
gpuboost/comparison/: __init__.py  engine.py  metrics.py
gpuboost/dataset/: __init__.py  assembly.py  benchmark_importers.py  export.py  history_converter.py  mlcommons_importer.py  outcome_collection.py  outcome_grid.py  readiness.py  splitting.py  techpowerup_importer.py  training_features.py  validation.py
gpuboost/demo/: __init__.py  real_world.py  reporting.py
gpuboost/history/: __init__.py  builder.py  compare.py  store.py
gpuboost/inspector/: __init__.py  gpu.py  profile.py  system.py  torch_env.py
gpuboost/model/: __init__.py  agent_features.py  artifacts.py  baseline.py  evaluation.py  feature_encoding.py  features.py  inference.py  neural.py  neural_reports.py  neural_training.py  provider.py  safety.py  training_data.py  training_pipeline.py  training_reports.py  training_splits.py
gpuboost/patching/: __init__.py  diff.py  planner.py
gpuboost/schemas/: __init__.py  agent.py  agentic.py  benchmark_result.py  code_analysis.py  comparison.py  dataset.py  gpu_profile.py  history.py  model.py  patch_plan.py  recommendation.py  training.py  trial.py
gpuboost/security/: __init__.py  audit.py
gpuboost/trial/: __init__.py  engine.py  patch_apply.py  syntax_check.py  test_command.py  workspace.py
gpuboost/utils/: __init__.py  errors.py  formatting.py  shell.py
scripts/: run_outcome_experiment_grid.ps1  run_outcome_experiments.ps1  run_real_world_demo_benchmarks.ps1  smoke_phase_12_model_workflow.ps1
tests/: __init__.py  test_advisor_engine.py  test_advisor_rules.py  test_advisor_schema.py  test_advisor_scoring.py  test_advisor_utils.py  test_agent_actions.py  test_agent_executor.py  test_agent_handlers.py  test_agent_integration.py  test_agent_planner.py  test_agent_report.py  test_agent_schema.py  test_agent_state.py  test_agent_workflow.py  test_agentic_approval_apply.py  test_benchmark_schema.py  test_benchmarks.py  test_cli.py  test_code_analysis_dataloader.py  test_code_analysis_optimizations.py  test_code_analysis_parser.py  test_code_analysis_runner.py  test_code_analysis_schema.py  test_code_analysis_sync_calls.py  test_code_analysis_visitors.py  test_comparison_engine.py  test_comparison_metrics.py  test_comparison_schema.py  test_dataset_assembly.py  test_dataset_benchmark_importers.py  test_dataset_export.py  test_dataset_history_converter.py  test_dataset_mlcommons_importer.py  test_dataset_outcome_collection.py  test_dataset_outcome_grid.py  test_dataset_readiness.py  test_dataset_schema.py  test_dataset_splitting.py  test_dataset_techpowerup_importer.py  (+54 more)
