[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpuboost"
dynamic = ["version"]
description = "NVIDIA GPU inspection and synthetic benchmark CLI for GPUBoost."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "GPUBoost contributors" }
]
keywords = ["gpu", "nvidia", "cuda", "pytorch", "optimization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
  "Topic :: Utilities",
]
dependencies = [
  "psutil",
  "nvidia-ml-py",
  "rich",
]

[project.urls]
Repository = "https://github.com/its-arnavtech/GPU-Boost"
Issues = "https://github.com/its-arnavtech/GPU-Boost/issues"

[project.optional-dependencies]
benchmark = [
  "torch",
  "numpy",
]
model = [
  "torch",
  "numpy",
]
all = [
  "torch",
  "numpy",
]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
gpuboost = "gpuboost.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["gpuboost"]

[tool.hatch.build]
exclude = [
  "/.venv",
  "/.pytest_cache",
  "/.ruff_cache",
  "/build",
  "/dist",
  "/wheelhouse",
  "/data/gpuboost/raw",
  "/data/gpuboost/generated",
  "/data/gpuboost/experiments/*/",
  "/data/gpuboost/experiments/grid_pairs.json",
  "/data/gpuboost/experiments/grid_runner_manifest.json",
  "/checkpoints",
  "/models",
  "/weights",
  "*.pt",
  "*.pth",
  "*.ckpt",
  "*.pkl",
  "*.joblib",
  "*.safetensors",
  "*.onnx",
  "*.sqlite",
  "*.sqlite3",
  "*.db",
  ".env",
  ".env.*",
]

[tool.hatch.version]
path = "gpuboost/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
